--- a/Index/Pages/Project_2/Bouwen_voor_Boer_Bert/Contents/Styling/Pagina.css
+++ b/Index/Pages/Project_2/Bouwen_voor_Boer_Bert/Contents/Styling/Pagina.css
@@ -2,60 +2,63 @@
     margin-top: auto;
     margin-right: auto;
     margin-left: auto;
-    border-radius: 100px;
+    border-radius: 15px;
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
+
 body {
     text-align: center;
-    background-color: lightgreen;   
-
+    background-color: #d3ffd3;  /* lichtgroene achtergrondkleur */
 }
 
 .Head {
     color: whitesmoke;
-    background-color: green;
+    background-color: #4CAF50;  /* donkergroene achtergrondkleur */
     max-width: 50%;
     margin-bottom: 10px;
-    margin-top  : 5px;
-    padding: 2px;
-    
-
+    margin-top: 5px;
+    padding: 20px;
+    border-radius: 15px;
 }
 
-.NavBar  {
+.NavBar {
     text-align: center;
     padding: 10px;
-    background-color: green;
+    background-color: #4CAF50;  /* donkergroene achtergrondkleur */
     border-radius: 20px;
     width: fit-content;
-    
+    margin: auto;
 }
 
 a {
     color: white;
     text-decoration: none;
-
-
 }
+
 a:hover {
     color: black;
-    background-color: blanchedalmond;
-    border-radius: 0%;
-
-}
-input {
-    display: grid;
-    max-width: fit-content;
-    margin-bottom: 5px;
-    margin-top  : 5px;
-    border-radius: 10px;
-    padding-bottom: 2px;
+    background-color: #ffe4b5;  /* lichte amandelkleur bij hover */
+    border-radius: 15px;
 }
 
-button {
-    max-width: fit-content;
+.text-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 20px;
 }
-::placeholder {
-    text-align: center;
-    border-radius: 50px;
+
+.textbox-1 {
+    max-width: 40%;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 15px;
+    background-color: #4CAF50;  /* donkergroene achtergrondkleur */
+    color: white;
+    transition: all 2s ease;  /* Added transition property for smooth effect */
+}
+
+.textbox-1:hover {
+    max-width: 50%;
 }
