--- a/Index/Styling/Index_desktop.css
+++ b/Index/Styling/Index_desktop.css
@@ -20,6 +20,43 @@ a {
     cursor: url(../Images/cursor.png), auto;
 }
 
+.contact img {
+    max-height: 25px;
+    max-width: 25px;
+}
+
+.socials {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-inline: 10%; /* Adjusted for smaller screens */
+}
+
+.socials a {
+    text-align: center;
+    text-decoration: none;
+    color: inherit;
+    margin-right: 10px; /* Adjusted for smaller screens */
+    width: auto; 
+}
+
+.socials a img {
+    display: block;
+    max-width: 25px;
+    max-height: 25px;
+    transition: all 0.3s ease-in-out;
+}
+
+.socials a img:hover {
+    transform: scale(1.3);
+    filter: grayscale(100%);
+}
+
+.socials a p {
+    margin: 0;
+    font-size: 0.5rem;
+}
+
 /* Desktop styles */
 @media screen and (min-width: 768px) {
     /* Hide mobile navigation */
@@ -35,7 +72,6 @@ a {
         color: whitesmoke;
         background-image: url(../Images/Welcome-to-Eifel.jpg);
         background-size: cover;
-        background-clip: border-box;
         height: 100vh;
     }
 
@@ -163,40 +199,5 @@ a {
         margin-top: -1.5%;
     }
 
-    .contact img {
-        max-height: 25px;
-        max-width: 25px;
-    }
 
-    .socials {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-inline: 10%; /* Adjusted for smaller screens */
-    }
-
-    .socials a {
-        text-align: center;
-        text-decoration: none;
-        color: inherit;
-        margin-right: 10px; /* Adjusted for smaller screens */
-        width: auto; 
-    }
-
-    .socials a img {
-        display: block;
-        max-width: 25px;
-        max-height: 25px;
-        transition: all 0.3s ease-in-out;
-    }
-
-    .socials a img:hover {
-        transform: scale(1.3);
-        filter: grayscale(100%);
-    }
-
-    .socials a p {
-        margin: 0;
-        font-size: 0.5rem;
-    }
 }
