--- a/Index/Pages/Styling/Projects.css
+++ b/Index/Pages/Styling/Projects.css
@@ -1,97 +1,99 @@
 html {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
-    scroll-behavior: smooth;
-    text-align: center;
-    scroll-snap-type: y proximity;
-    user-select: none;
-    background-color: cadetblue;
-    color: aquamarine;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  scroll-behavior: smooth;
+  text-align: center;
+  scroll-snap-type: y proximity;
+  user-select: none;
+  background-color: cadetblue;
+  color: aquamarine;
 }
 
 html::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 body {
-    background-color: transparent;
-    margin: 0%;
-    background-size: cover;
-    background-position: center;
+  background-color: transparent;
+  margin: 0%;
+  background-size: cover;
+  background-position: center;
 }
 
 .Nav {
-    min-height: 15vh;
-    max-height: 100vh;
-    margin-top: 0%;
+  min-height: 15vh;
+  max-height: 100vh;
+  margin-top: 0%;
 }
 
 .Nav img {
-    max-height: 25px;
-    max-width: 25px;
+  max-height: 25px;
+  max-width: 25px;
 }
 
 .Nav h1 {
-    font-size: 2rem;
-    transition: font-size 1s ease-in-out, letter-spacing 0.5s ease-in-out;
-    transition-delay: 0.2s;
-    width: fit-content;
-    margin-inline: auto;
-    height: 2rem; 
-    line-height: 2rem; 
+  font-size: 2rem;
+  transition:
+    font-size 1s ease-in-out,
+    letter-spacing 0.5s ease-in-out;
+  transition-delay: 0.2s;
+  width: fit-content;
+  margin-inline: auto;
+  height: 2rem;
+  line-height: 2rem;
 }
 
 .Nav h1:hover {
-    letter-spacing: 0.2rem;
-    font-size: 2.2rem;
-    color: inherit, blueviolet;
+  letter-spacing: 0.2rem;
+  font-size: 2.2rem;
+  color: inherit, blueviolet;
 }
 
 .projects {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    gap: 10px;
-    align-items: center;
-    justify-content: center;
-    margin-inline: 20%;
-    }
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  margin-inline: 20%;
+}
 
 .projects a {
-    text-align: center;
-    text-decoration: none;
-    color: inherit;
-    margin-right: 20px;
-    width: auto; 
-    align-items: center;
-    transition: all 0.3s ease-in-out;
+  text-align: center;
+  text-decoration: none;
+  color: inherit;
+  margin-right: 20px;
+  width: auto;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
 }
 
 .projects a img {
-    display: block;
-    max-width: 200px;
-    max-height: 150px;
-    transition: all 0.3s ease-in-out;
+  display: block;
+  max-width: 200px;
+  max-height: 150px;
+  transition: all 0.3s ease-in-out;
 }
 
 .projects a .hidden {
-    display: none;
-    font-size: 0.5rem;
-    visibility: hidden; /* Hide the text but reserve its space */
+  display: none;
+  font-size: 0.5rem;
+  visibility: hidden; /* Hide the text but reserve its space */
 }
 
 .projects a:hover img,
 .projects a:hover .hidden {
-    transform: scale(1.3);
-    filter: grayscale(100%);
-    visibility: visible; /* Show the hidden text on hover */
-    display: initial;
+  transform: scale(1.3);
+  filter: grayscale(100%);
+  visibility: visible; /* Show the hidden text on hover */
+  display: initial;
 }
 
 .projects a:hover p {
-    display: none; /* Hide the paragraph on hover */
+  display: none; /* Hide the paragraph on hover */
 }
 
 .projects a p {
-    margin: 0;
-    font-size: 1rem;
+  margin: 0;
+  font-size: 1rem;
 }
